changed 'img' to 'IMG' to the backgound image to work.

--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -6,7 +6,7 @@ body {
 		background-color: color: white;
     color: white;
 		font-family: 'Montserrat', sans-serif;
-		background-image: url("../img/meetup.jpg");
+		background-image: url("../IMG/meetup.jpg");
  		background-repeat: no-repeat;
  		background-size: cover;
  
