--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,24 +1,69 @@
 <html>
 <head>
 <title>API</title>
+<style>
+body { 
+        color: #161616;;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 14px;
+        text-align: center;
+        letter-spacing: 0.1em;
+        margin: 75px; }
+h2 { background: skyblue; padding: 3px; }
+</style>
 </head>
 <body>
-<h1>RESTFUL API ENDPOINTS</h1>
-<div>
-<h3> ENDPOINT 1: POST /MEETUPS/ - CREATE A MEETUP RECORD </h4>
+<h1>QUESTIONER API ENDPOINT ROUTES</h1>
+<h2> 1. USER ROUTES </h2>
+<hr>
+<h3> 1.1. CREATING A NEW USER WITH POST METHOD </h3>
 <p> 
-    <a href="https://questioner-web-app.herokuapp.com/api/v1/meetups/"> Link One </a>
+    https://questioner-web-app.herokuapp.com/api/v1/users/
 </p>
-<br>
-<h3> ENDPOINT 2: GET /MEETUPS/ - FETCH ALL MEETUP RECORDS </h4>
+<hr>
+<h3> 1.2. RETRIEVING ALL USERS WITH GET METHOD </h3>
 <p> 
-    <a href="https://questioner-web-app.herokuapp.com/api/v1/meetups/"> Link Two </a> 
+    https://questioner-web-app.herokuapp.com/api/v1/users/
 </p>
-<br>
-<h3> ENDPOINT 3: GET /MEETUPS/MEETUP-ID - FETCH A SPECIFIC MEETUP RECORD </h4>
+<hr>
+<h3> 1.3. RETRIEVING A SPECIFIC USER WITH GET METHOD AND USER ID PASSED AS AN ARGUMENT </h3>
 <p> 
-    <a href="https://questioner-web-app.herokuapp.com/api/v1/meetups/"> Link Three </a>
+    https://questioner-web-app.herokuapp.com/api/v1/users/(id: put user id here)
 </p>
-</div>
+<hr>
+<h2> 2. MEETUP ROUTES </h2>
+<hr>
+<h3> 1.1. CREATING A NEW MEETUP WITH POST METHOD </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/meetups/
+</p>
+<hr>
+<h3> 1.2. RETRIEVING ALL MEETUPS WITH GET METHOD </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/meetups/
+</p>
+<hr>
+<h3> 1.3. RETRIEVING A SPECIFIC MEETUP WITH GET METHOD AND USER ID PASSED AS AN ARGUMENT </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/meetups/(id: put meetup id here)
+</p>
+<hr>
+<h2> 3. QUESTION ROUTES </h2>
+<hr>
+<h3> 1.1. CREATING A NEW QUESTION WITH POST METHOD </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/questions/
+</p>
+<hr>
+<h3> 1.2. RETRIEVING ALL QUESTIONS WITH GET METHOD </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/questions/
+</p>
+<hr>
+<h3> 1.3. RETRIEVING A SPECIFIC QUESTION WITH GET METHOD AND QUESTION ID PASSED AS AN ARGUMENT </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/questions/(id: put question id here)
+</p>
+<hr>
 </body>
 </html>
