Added more lines for describing new Endpoints

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -48,6 +48,16 @@ h2 { background: skyblue; padding: 3px; }
     https://questioner-web-app.herokuapp.com/api/v1/meetups/(id: put meetup id here)
 </p>
 <hr>
+<h3> 1.4. RESPONDING TO A SPECIFIC MEETUP WITH POST METHOD / MEETUP RSVP </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/meetups/(id: put meetup id here)/rsvps/
+</p>
+<hr>
+<h3> 1.5. RETRIEVING UPCOMING MEETUPS WITH GET METHOD </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/meetups/upcoming/
+</p>
+<hr>
 <h2> 3. QUESTION ROUTES </h2>
 <hr>
 <h3> 1.1. CREATING A NEW QUESTION WITH POST METHOD </h3>
@@ -65,5 +75,19 @@ h2 { background: skyblue; padding: 3px; }
     https://questioner-web-app.herokuapp.com/api/v1/questions/(id: put question id here)
 </p>
 <hr>
+<h3> 1.4. UPVOTING A SPECIFIC QUESTION WITH PATCH METHOD </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/questions/(id: put question id here)/upvote/
+</p>
+<hr>
+<h3> 1.5. DOWNVOTING A SPECIFIC QUESTION WITH PATCH METHOD </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/questions/(id: put question id here)/downvote/
+</p>
+<hr>
 </body>
+<br>
+<footer>
+        <h3> Copyright &copy; 2019 Placide IRANDORA </h3>
+</footer>
 </html>
