[Chore] Improved The Design

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -31,6 +31,16 @@ h2 { background: skyblue; padding: 3px; }
     https://questioner-web-app.herokuapp.com/api/v1/users/(id: put user id here)
 </p>
 <hr>
+<h3> 1.4. REGISTERING A USER </h3>
+<p> 
+https://questioner-web-app.herokuapp.com/api/v1/users/auth/signup
+</p>
+<hr>
+<h3> 1.5. LOGGING IN A USER </h3>
+<p> 
+https://questioner-web-app.herokuapp.com/api/v1/users/auth/login
+</p>
+<hr>
 <h2> 2. MEETUP ROUTES </h2>
 <hr>
 <h3> 1.1. CREATING A NEW MEETUP WITH POST METHOD </h3>
@@ -56,6 +66,11 @@ h2 { background: skyblue; padding: 3px; }
 <h3> 1.5. RETRIEVING UPCOMING MEETUPS WITH GET METHOD </h3>
 <p> 
     https://questioner-web-app.herokuapp.com/api/v1/meetups/upcoming/
+</p>
+<hr>
+<h3> 1.6. DELETING A SPECIFIC MEETUP </h3>
+<p> 
+https://questioner-web-app.herokuapp.com/api/v1/meetups/1
 </p>
 <hr>
 </body>
