[chore] changed directory name from IMG to img

--- a/UI/css/main.css
+++ b/UI/css/main.css
@@ -48,7 +48,7 @@ input, textarea {
 				  background: none;
 				  background-image: none;
 				  border: 2px solid #c1bdba;
-				  color: color: #212529;
+				  color: #212529;
 				  border-radius: 0;
 				  transition: border-color .25s ease, box-shadow .25s ease;
 				  text-align: center;
