--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -3,10 +3,10 @@
   }
 
 body {
-		background-color: color: white;
+		background-color: white;
     color: white;
 		font-family: 'Montserrat', sans-serif;
-		background-image: url("../IMG/meetup.jpg");
+		background-image: url("../img/meetup.jpg");
  		background-repeat: no-repeat;
  		background-size: cover;
  
