--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>API</title>
+<title>QUESTIONER</title>
 <style>
 body { 
         color: #161616;;
@@ -14,63 +14,91 @@ h2 { background: skyblue; padding: 3px; }
 </head>
 <body>
 <h1>QUESTIONER API ENDPOINT ROUTES</h1>
+<br>
 <h2> 1. USER ROUTES </h2>
 <hr>
-<h3> 1.1. CREATING A NEW USER WITH POST METHOD </h3>
+<h3> 1.1. REGISTER A NEW USER WITH POST METHOD </h3>
 <p> 
-    https://questioner-web-app.herokuapp.com/api/v1/users/
+    https://questioner-web-app.herokuapp.com/api/v1/auth/signup
 </p>
 <hr>
-<h3> 1.2. RETRIEVING ALL USERS WITH GET METHOD </h3>
+<h3> 1.2. LOG IN THE USER WITH POST METHOD </h3>
 <p> 
-    https://questioner-web-app.herokuapp.com/api/v1/users/
+    https://questioner-web-app.herokuapp.com/api/v1/auth/login
 </p>
 <hr>
-<h3> 1.3. RETRIEVING A SPECIFIC USER WITH GET METHOD AND USER ID PASSED AS AN ARGUMENT </h3>
+<h3> 1.3. RETRIEVE ALL USERS WITH GET METHOD </h3>
 <p> 
-    https://questioner-web-app.herokuapp.com/api/v1/users/(id: put user id here)
+    https://questioner-web-app.herokuapp.com/api/v1/users
 </p>
 <hr>
-<h3> 1.4. REGISTERING A USER </h3>
+<h3> 1.4. RETRIEVE A SPECIFIC USER WITH GET METHOD </h3>
 <p> 
-https://questioner-web-app.herokuapp.com/api/v1/users/auth/signup
+    https://questioner-web-app.herokuapp.com/api/v1/users/id
 </p>
 <hr>
-<h3> 1.5. LOGGING IN A USER </h3>
+<h3> 1.5. DELETE A SPECIFIC USER WITH DELETE METHOD </h3>
 <p> 
-https://questioner-web-app.herokuapp.com/api/v1/users/auth/login
+    https://questioner-web-app.herokuapp.com/api/v1/users/id
 </p>
 <hr>
 <h2> 2. MEETUP ROUTES </h2>
 <hr>
-<h3> 1.1. CREATING A NEW MEETUP WITH POST METHOD </h3>
+<h3> 2.1. CREATE A NEW MEETUP WITH POST METHOD </h3>
 <p> 
-    https://questioner-web-app.herokuapp.com/api/v1/meetups/
+    https://questioner-web-app.herokuapp.com/api/v1/meetups
 </p>
 <hr>
-<h3> 1.2. RETRIEVING ALL MEETUPS WITH GET METHOD </h3>
+<h3> 2.2. RETRIEVE ALL MEETUPS WITH GET METHOD </h3>
 <p> 
-    https://questioner-web-app.herokuapp.com/api/v1/meetups/
+    https://questioner-web-app.herokuapp.com/api/v1/meetups
 </p>
 <hr>
-<h3> 1.3. RETRIEVING A SPECIFIC MEETUP WITH GET METHOD AND USER ID PASSED AS AN ARGUMENT </h3>
+<h3> 2.3. RETRIEVE A SPECIFIC MEETUP WITH GET METHOD </h3>
 <p> 
-    https://questioner-web-app.herokuapp.com/api/v1/meetups/(id: put meetup id here)
+    https://questioner-web-app.herokuapp.com/api/v1/meetups/id
 </p>
 <hr>
-<h3> 1.4. RESPONDING TO A SPECIFIC MEETUP WITH POST METHOD / MEETUP RSVP </h3>
+<h3> 2.4. RESPOND TO A SPECIFIC MEETUP WITH POST METHOD </h3>
 <p> 
-    https://questioner-web-app.herokuapp.com/api/v1/meetups/(id: put meetup id here)/rsvps/
+    https://questioner-web-app.herokuapp.com/api/v1/meetups/id/rsvps
 </p>
 <hr>
-<h3> 1.5. RETRIEVING UPCOMING MEETUPS WITH GET METHOD </h3>
+<h3> 2.5. RETRIEVE UPCOMING MEETUPS WITH GET METHOD </h3>
 <p> 
-    https://questioner-web-app.herokuapp.com/api/v1/meetups/upcoming/
+    https://questioner-web-app.herokuapp.com/api/v1/meetups/upcoming
 </p>
 <hr>
-<h3> 1.6. DELETING A SPECIFIC MEETUP </h3>
+<h3> 2.6. DELETE A SPECIFIC MEETUP </h3>
 <p> 
-https://questioner-web-app.herokuapp.com/api/v1/meetups/1
+https://questioner-web-app.herokuapp.com/api/v1/meetups/id
+</p>
+<hr>
+<h3> 2.7. POST A QUESTION IN A SPECIFIC MEETUP WITH POST METHOD </h3>
+<p> 
+https://questioner-web-app.herokuapp.com/api/v1/meetups/id/questions
+</p>
+<hr>
+<h2> 3. QUESTION ROUTES </h2>
+<hr>
+<h3> 3.1. UPVOTE A SPECIFIC QUESTION WITH PATCH METHOD </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/questions/id/upvote
+</p>
+<hr>
+<h3> 3.2. DOWNVOTE A SPECIFIC QUESTION WITH PATCH METHOD </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/questions/id/downvote
+</p>
+<hr>
+<h3> 3.3. RETRIEVE QUESTIONS FOR A SPECIFIC MEETUP WITH GET METHOD </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/questions/id
+</p>
+<hr>
+<h3> 3.4. COMMENT A SPECIFIC QUESTION WITH POST METHOD </h3>
+<p> 
+    https://questioner-web-app.herokuapp.com/api/v1/questions/id/comments
 </p>
 <hr>
 </body>
