[chore] added a description of the new meetup route

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -79,6 +79,11 @@ https://questioner-web-app-ch3.herokuapp.com/api/v1/meetups/id
 https://questioner-web-app-ch3.herokuapp.com/api/v1/meetups/id/questions
 </p>
 <hr>
+<h3> 2.8. UPDATE TOPIC AND LOCATION OF A SPECIFIC MEETUP WITH PUT METHOD </h3>
+<p> 
+https://questioner-web-app-ch3.herokuapp.com/api/v1/meetups/id/
+</p>
+<hr>
 <h2> 3. QUESTION ROUTES </h2>
 <hr>
 <h3> 3.1. UPVOTE A SPECIFIC QUESTION WITH PATCH METHOD </h3>
