--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100vh;
-  background: url('../img/question-3.png') no-repeat center;
+  background: url('../IMG/question-3.png') no-repeat center;
   background-size: cover;
   color: white;
   font-family: 'Comfortaa', cursive;
